--- a/04-week4.Rmd
+++ b/04-week4.Rmd
@@ -15,12 +15,21 @@ library(patchwork)
 
 ## 今日の目標
 
-1. 
-2. 
+1. 統計的検定の論理や手順を理解できる
+2. *t* 検定をRで実装し、分析結果を報告することができる
 
 ## 統計的検定（statistical test）
-- 母数についての推定（「日本人の男子の平均身長は170 cmだ」）が合っているかを、統計的に検定する
+- 母数についての推定（例「日本人の男子の平均身長は170 cmだ」）が合っているかを、統計学的に検定する
 
+  - 使用する標本は、母集団から無作為抽出していることを前提にしている = 標本は母集団を代表している
+
+- 大別して2種類ある
+
+  - **パラメトリック検定**： 母数（パラメータ）に特定の確率分布の仮定を設ける検定（例 *t* 検定、分散分析）
+    - 注：確率分布の形状を決める値（正規分布の平均と標準偏差など）もパラメータと呼ぶ。本講義ではパラメータは母数ではなく、確率分布を規定する値を指す。
+  
+  - **ノンパラメトリック検定**：母集団に特定の確率分布を仮定しない検定（例 カイ二乗検定）
+  
 ### 統計的検定の論理
 - 母集団からサンプリングした標本から、母数についての推定が合っているかを議論できない。しかし、確率的な範囲であれば、推定が間違っているかを確かめることができる。
 
@@ -134,7 +143,7 @@ df <- data.frame(
 
 ```
 
-```{r, echo=FALSE}
+```{r}
 summary(data1)
 summary(data2)
 ```
@@ -145,13 +154,13 @@ a <- df %>%
   ggplot(aes(Data1)) +
   geom_histogram(fill = "skyblue", color = "black", alpha = 0.7, bins = 10) +
   geom_vline(xintercept = 55, lwd = 2, linetype = "dashed") +
-  theme_minimal() 
+  theme_minimal() +ggtitle("平均: 60.27")
 
 b <- df %>%
   ggplot(aes(Data2)) +
   geom_histogram(fill = "salmon", color = "black", alpha = 0.7, bins = 10) +
   geom_vline(xintercept = 55, lwd = 2, linetype = "dashed") +
-  theme_minimal()
+  theme_minimal() +ggtitle("平均: 58.11")
 
 # 並べて表示
 a + b
@@ -173,7 +182,9 @@ a + b
 3. 検定統計量の設定
 
 4. 有意水準（ *α* ）の設定
-- 慣例的に5%が用いられる。
+
+- 慣例的に言語研究の分野では5%が用いられる。
+
 - 帰無仮説を偽とする場合でも、最大5%程度はそれが間違えている可能性を表す。
 
   - 分析の前に決定し、結果を見て有意水準を大きくするのは、研究倫理に反するとみられる可能性が大いにある。
@@ -205,19 +216,19 @@ t.test(df$Data2, mu = 55)
 :::
 
 ### 統計的検定の誤りと検出力
-- 統計的検定では、限界点として、100%正しいことは保証されない。
 
-  有意水準が5%であれば、5%の誤った主張を許すことになる
   
 - 第一種の誤り（type Ⅰ error）
 
-  - 帰無仮説が真なのに、誤って偽だと主張すること
+  - 帰無仮説が真なのに、誤って偽だと主張すること（本当は差がないのに差があると判断する）
   
   - 有意水準 *α* の値と一致
   
+    - 統計的検定では、限界点として、100%正しいことは保証されない。有意水準が5%であれば、5%の誤った主張を許すことになる。
+  
 - 第二種の誤り（type Ⅱ error）
 
-  - 帰無仮説が偽なのに、それを偽であると言えない（保留）すること
+  - 帰無仮説が偽なのに、それを偽であると言えない（保留）すること（本当は差があるのに差がないと判断する）
 
   - *β* で表す
 
@@ -241,28 +252,202 @@ knitr::include_graphics("C:/Users/terai-masato/Documents/stat_class_2025/picture
   
     - 帰無分布と真の母数の標本分布が離れるため、検出力は、帰無仮説と母平均の差が大きいほど、標本サイズが大きいほど大きくなる。
 
-# ここにGifを入れられたら最高
+::: infobox
+サンプルサイズ・検定力・有意水準に加え、**効果量（effect size）**も連動している。効果量は後の講義で詳しく扱うが、簡単に説明すると、関心を持つ事柄の大きさである。4つのうち、3つが分かれば、自動的に残りの1つの値を特定できる。これを利用したのが**検定力分析（power analysis）**である。これを**実験前に**使うことで、どれくらいの標本を収集すべきかを検討できる。近年の研究では、参加者の数を検定力分析で決めているかを重視する（査読で！）動きがある。
 
-```{r}
+:::
 
-```
 
-# 平井 et al. の内容を付け加える（効果量、片側、両側）
+
+### 有意性検定（≒ 統計的検定）の問題点
+
+- 有意確率（ *p* < 0.05）だけに結果を頼るのはよくない
+
+  - 無作為抽出を前提としていても、必ず得られた結果に**誤差**が含まれている
+  
+  - 標本サイズに大きく左右される
+
+- 統計的検定における誤差と問題点の対処法
+
+1. できるだけ母集団を代表するサンプルを得る
+2. 信頼区間を報告する
+3. 検定力分析で標本サイズを事前に決める
+4. 効果量を報告する
+
+::: infobox
+言語研究における効果量は、Neyman-Pearson流の理論に基づくことがほとんど。
+:::
+
+### 頻度論的統計学とベイズ統計学
+- ここまで説明してきた話 + この講義のほとんどの説明における統計学は、頻度論的統計学（frequentist statistics）と呼ばれる枠組み。
+
+  - 検定において用いる数学的手法が異なる。頻度 vs. ベイズのような「主義の違いによる対立構造」は避けた方がよい
+  
+    - [参考: Bayesians are frequentists.](https://statmodeling.stat.columbia.edu/2024/01/08/bayesians-are-frequentists-2/)
+
+  - 母集団からサンプリングする（標本を抽出する）のは繰り返すことができる試行において起こる事象の相対頻度（frequency）をもとに行われる。例えば、サイコロを14回降って、1の目が3回出た場合、1が出る確率は \frac{3}{4} になる。これを**頻度論的確率**と呼び、人間の主観や信念に依存しない客観的な確率である。
+    
+    - 確率とは無限回試行を行ったときの割合
+
+    - 仮説の評価を *p* 値を用いて行う
+    
+      - 「帰無仮説のもとでデータが得られる確率」を計算する
+      
+    - データを追加して再度分析する際、、適切な方法を用いないと、計算された*p* 値と有意水準が当初の値から変わってしまう（検定力分析が重要な理由）
+
+- **ベイズ統計学**では、**主観確率**（「明日は30%で晴れるだろう」）と客観確率（「10日3日晴れたから明日は晴れるだろう」）の両方を検定に使用する。
+
+  - ベイズ統計学では *p* 値は使わない
+  
+  - ベイズ統計では、データを追加して再度分析することはOK（データの二度漬けをしない限り）
+
+- 頻度論的統計学、ベイズ統計学どちらにおいても、「無作為抽出により標本が母集団を代表している」「母集団からのサンプリングを近似していること」という前提が重要
+
+  - ベイズ統計学の方が道具的に使いやすいと考えることもできる
 
 ## ハンズオンセッション
-# t検定？？
+### *t* 検定
+- *t* 分布に照らし合わせて、2群の平均値の差を検証する場合に用いる。
 
+  - 平均値だけでなく、分散（データのばらつき）も考慮される
+
+### 基本用語
+
+#### 対応のあり・なし
+
+- 対応あり（repeated measures）：同じ参加者からの2種類のデータ（例 同じ参加者の国語と英語の点数）
+
+- 対応なし（independent measures）：異なる参加者からなる2種類のデータ（例 1年生と2年生の英語の点数）
+
+  - 実験群（experimental group）と統制群（control group）
+
+### *t*検定を使用する前提
+
+1. データの種類：間隔尺度または比例尺度
+2. サンプリング：母集団から無作為抽出され、母集団を十分代表していること
+3. 正規性：標本平均の分布が正規分布に従うこと。少々外れている場合は正規性に対して頑健であるためOK。大きく外れている場合はノンパラメトリック版の*t*検定を行う。サンプルサイズは各群20名以上でないと正規性が期待できない可能性が高い。
+4. （対応なしの場合のみ）等分散性：比較する2群のデータの分散が等しいこと（= 母分散が等しい集団からデータがサンプリングされていること）。*t*検定は母分散の等質性に関しても頑健であるため、グループのサンプルサイズが等しい場合、分析結果が歪むことはほとんどない。
+  - 等分散性は**ルビーンの検定**で検証する。有意な結果が得られた場合は、「等分散性を仮定しない」ウェルチの方法やコクラン・コックスの方法で調整する。
+  
+5. （対応なしの場合のみ）観測値の独立性：データがお互いに影響し合い相関が高い場合、第一種の過誤が起こりやすくなる
+
+### *t* 値の算出
+
+- 標本平均の標本誤差：差がどれだけ偶然の誤差によって起きるかを推定
+
+- 偶然起こる誤差おりどの程度大きいかを調べる検定
+
+\[t\ =\ \frac{観測された標本平均の差}{標本平均の差の標準誤差}\]
+
+#### 対応なし *t* 検定（サンプルサイズが等しい）
+\[
+t = \frac{\bar{x}_1 - \bar{x}_2}{\sqrt{\frac{S_1^2}{n_1} + \frac{S_2^2}{n_2}}} \hspace{3pc} (df = n_1 + n_2 - 2)
+\]
+
+
+#### 対応なし *t* 検定（サンプルサイズが異なる）
+
+\[
+s_p^2 = \frac{(n_1 - 1)s_1^2 + (n_2 - 1)s_2^2}{n_1 + n_2 - 2}
+\]
+
+\[
+t = \frac{\bar{x}_1 - \bar{x}_2}{\sqrt{\frac{s_p^2}{n_1} + \frac{s_p^2}{n_2}}}
+\]
+
+
+#### 対応あり *t* 検定
+
+\[
+t = \frac{\bar{x}_1 - \bar{x}_2}{S_D / \sqrt{n}} \hspace{3pc} (df = n - 1)
+\]
+
+
+### Rでの実装
+
+#### 対応なし *t* 検定
+
+- データの読み込み
+```{r}
+dat_t_ind <- read.csv("../stat_class_2025/sample_data/ttest_inde.csv")
+```
+
+```{r}
+head(dat_t_ind)
+```
+```{r}
+length(table(dat_t_ind$ID))
+```
+
+
+```{r}
+boxplot(English ~ Class, data = dat_t_ind)
+```
+
+```{r}
+library(psych)
+describeBy(dat_t_ind$English, group = dat_t_ind$Class)
+```
+
+- Rでは特に指定を行わない場合、「等分散を仮定しない」ウェルチの方法による *t* 検定が行われる。よって、Rで *t* 検定を行う場合、この検定を行う必要はない。
+```{r}
+var.test(English ~ Class, data =dat_t_ind)
+```
+
+```{r}
+t.test(English ~ Class, data = dat_t_ind)
+```
+
+- **論文記載例**
+
+- \* 本来であれば、効果量も報告する必要があるが、今回は省略している。
+
+  - 異なる指導法を実施したクラス A とクラス B の英語テストの平均点は、83.03 (*SD* = 4.3)と 60.48 (*SD* = 5.73 でクラス A の平均の方が高かった。 *t* 検定を使って比較した結果、*t*(72.353) = 19.911, *p* < .001、 *d* = xxx [95%CI = xxx, xxx] で、クラスAのほうが統計的に有意に英語テストの成績が高いことがわかった。
+
+    - *p* 値は原則実数値報告である（ *p* = .046）。しかし、値が0.01よりも小さい場合は、*p* < .001のように報告する。
+
+#### 対応あり
+
+- データの読み込み
+```{r}
+dat_t_rep <- read.csv("../stat_class_2025/sample_data/ttest_rep.csv")
+```
+
+```{r}
+head(dat_t_rep)
+```
+
+```{r}
+length(table(dat_t_rep$ID))
+```
+
+```{r}
+boxplot(dat_t_rep$English, dat_t_rep$Math, names = c("English", "Math"))
+```
+
+```{r}
+describe(dat_t_rep$English)
+describe(dat_t_rep$Math)
+```
+- ```paired = T```を設定する
+```{r}
+t.test(dat_t_rep$English, dat_t_rep$Math,
+      paired = T
+       )
+```
+
+- **論文記載例**
+
+- \* 本来であれば、効果量も報告する必要があるが、今回は省略している。
+
+  - Aクラスの40名の学生を対象に、英語と数学のテストの得点を比較した。英語の平均点は、82.22 (*SD* = 8.65)と 75.85 (*SD* = 10.02)で英語の平均の方が高かった。対応ありの *t* 検定を使って比較した結果、*t*(39) = 21.641, *p* < .001、 *d* = xxx [95%CI = xxx, xxx] で、英語のほうが統計的に有意に得点が高いことがわかった。
 
 ## 次週までの課題
 ### 課題内容
 
 1. 小テストに向けて今回の内容を復習する。必ず手でコードを入力してRを実行する。
 
-2. あなたには高校生の弟がいます（平均までは知っているが分散は知らない）。ポケモンが大好きな弟から以下の質問が来たとする。この答えを具体的な数値や図を基に回答してください。R Markdownファイルで作成し、HTMLファイルに変換しそれを提出してください。
-
-  - 「全ポケモンのHPの平均って大体どれくらい？」
-  - 「その平均ってどれくらい正確なの（どれくらいの幅があるの）？」
-  - 「ポケモンのステータスってどれくらいの値が一番多いの？」
+2. （宿題を考える）
 
 - **Rで数値を出力するだけでなく、それぞれの質問への回答を高校生にもわかりやすく文字で記載してください。**
 
@@ -274,7 +459,13 @@ knitr::include_graphics("C:/Users/terai-masato/Documents/stat_class_2025/picture
 
 - 心理学統計法　放送大学
 - https://www.isc.meiji.ac.jp/~hirukawa/randomevent/test1.htm
-
+- 中村 心理学・教育学研究のための効果量入門
+- 平井 et al. 
+- 心理学統計の基礎
+- https://www.note.kanekoshobo.co.jp/n/nf836d37b7f10#61a8e679-85a4-411c-96dd-5a1a37335572
+- https://x.com/genkuroki/status/1227224899875295234
+- https://norimune.net/3339
+- https://statmodeling.stat.columbia.edu/2024/01/08/bayesians-are-frequentists-2/
 ```{=html}
 <style>
 .infobox {
