--- a/04-week4.Rmd
+++ b/04-week4.Rmd
@@ -305,6 +305,12 @@ knitr::include_graphics("C:/Users/terai-masato/Documents/stat_class_2025/picture
 
   - ベイズ統計学の方が道具的に使いやすいと考えることもできる
 
+::: infobox
+
+フローチャート的な統計分析は推奨されません。分析の前に、分析するデータの母集団がどのような形状なのか、この分析方が正しいのかなど十分検討することが重要です。
+
+:::
+
 ## ハンズオンセッション
 ### *t* 検定
 - *t* 分布に照らし合わせて、2群の平均値の差を検証する場合に用いる。
@@ -325,11 +331,18 @@ knitr::include_graphics("C:/Users/terai-masato/Documents/stat_class_2025/picture
 
 1. データの種類：間隔尺度または比例尺度
 2. サンプリング：母集団から無作為抽出され、母集団を十分代表していること
-3. 正規性：標本平均の分布が正規分布に従うこと。少々外れている場合は正規性に対して頑健であるためOK。大きく外れている場合はノンパラメトリック版の*t*検定を行う。サンプルサイズは各群20名以上でないと正規性が期待できない可能性が高い。
+3. 正規性：標本平均の分布が正規分布に従うこと。少々外れている場合は正規性に対して頑健であるためOK。大きく外れている場合はノンパラメトリック版の*t*検定を検討することも考えれるが、ウェルチの*t*検定を用いることをできるだけ優先する方がいい場合が多い。ノンパラメトリック検定にも使用する前提がある。
 4. （対応なしの場合のみ）等分散性：比較する2群のデータの分散が等しいこと（= 母分散が等しい集団からデータがサンプリングされていること）。*t*検定は母分散の等質性に関しても頑健であるため、グループのサンプルサイズが等しい場合、分析結果が歪むことはほとんどない。
-  - 等分散性は**ルビーンの検定**で検証する。有意な結果が得られた場合は、「等分散性を仮定しない」ウェルチの方法やコクラン・コックスの方法で調整する。
+  - ウェルチの*t*検定を使うのがよい = *t* 検定の場合基本ウェルチの*t* 検定を使う
   
 5. （対応なしの場合のみ）観測値の独立性：データがお互いに影響し合い相関が高い場合、第一種の過誤が起こりやすくなる
+
+
+<div class="alert alert-info">
+  <strong>重要</strong>正規性の検定や等分散性の検定を行うことを推奨されることがあるが、このような事前テストは第一種&第二種の過誤の確率を高めることが報告されている（e.g., Rasch et al. [2011]）。そのため、そのような検定を行わず、ウェルチの*t* 検定を行う方がよい。
+</div>
+
+
 
 ### *t* 値の算出
 
@@ -389,10 +402,7 @@ library(psych)
 describeBy(dat_t_ind$English, group = dat_t_ind$Class)
 ```
 
-- Rでは特に指定を行わない場合、「等分散を仮定しない」ウェルチの方法による *t* 検定が行われる。よって、Rで *t* 検定を行う場合、この検定を行う必要はない。
-```{r}
-var.test(English ~ Class, data =dat_t_ind)
-```
+
 
 ```{r}
 t.test(English ~ Class, data = dat_t_ind)
@@ -466,6 +476,8 @@ t.test(dat_t_rep$English, dat_t_rep$Math,
 - https://x.com/genkuroki/status/1227224899875295234
 - https://norimune.net/3339
 - https://statmodeling.stat.columbia.edu/2024/01/08/bayesians-are-frequentists-2/
+- Rasch, D., Kubinger, K. D., & Moder, K. (2011). The two-sample t test: pre-testing its assumptions does not pay off. Statistical papers, 52, 219-231.
+
 ```{=html}
 <style>
 .infobox {
