--- a/index.Rmd
+++ b/index.Rmd
@@ -29,25 +29,31 @@ github-repo: rstudio/bookdown-demo
 
 4. 統計理論の数学・概念的知識
 
-- 注
-  - <u> **毎回の講義で必ずRStudioがインストールされているパソコンを持参してください。** </u>
-  - <u> **講義内容、講義スケジュールは講義の進度等によって変更する可能性があります。** </u>
+<div class="alert alert-info">
+  <strong>注</strong> 
+  
+- 毎回の講義で必ずRStudioがインストールされているパソコンを持参してください。
+
+- 講義内容、講義スケジュールは講義の進度等によって変更する可能性があります。
+
+</div>
+
 
 ## 講義スケジュール
 - Week 1：オリエンテーション、R(Studio)のインストールと操作、R Markdown
 - Week 2：要約統計量
 - Week 3：推測統計学
 - Week 4：統計的検定の論理と *t検定*
-- Week 5：分散分析
-- Week 6：多元配置分散分析
-- Week 7：相関分析
-- Week 8：
-- Week 9：効果量
-- Week 10：単回帰分析
-- Week 11：重回帰分析
-- Week 12：一般化線形混合効果モデル
+- Week 5：相関分析
+- Week 6：単回帰分析（連続型の説明変数）
+- Week 7：重回帰分析
+- Week 8：一般化線形モデル：ロジスティック回帰分析
+- Week 9：階層モデル
+- Week 10：効果量と検定力分析
+- Week 11：tidyverseパッケージによるデータの加工と可視化
+- Week 12：
 - Week 13：ノンパラメトリック検定
-- Week 14：tidyverseパッケージによるデータの加工と描画
+- Week 14：
 - Week 15：言語研究とオープンサイエンス
 
 ## 成績評価について
