--- a/07-regression.Rmd
+++ b/07-regression.Rmd
@@ -1,10 +1,14 @@
-# 単回帰分析
+# 単回帰分析（連続型の説明変数）
 
 ```{r, include=FALSE}
 library(tidyverse)
 library(magick)
+library(rstanarm)
 options(scipen = 999)
 ```
+
+## 今後の修正案
+- 最小二乗法の話だけをするのであれば、lmを一貫して使った方がいい？でも正規分布なら一致するからglmを使ってもいい？？
 
 ## 事前の確認
 
@@ -15,12 +19,40 @@ options(scipen = 999)
 
 ## 今日の目標
 
-1. 
-2. 
+1. 回帰分析の統計理論を数学的・概念的に理解できる
+2. 回帰分析（独立変数が連続値）をRで実装し、その結果を可視化などを通して説明できる
 
 ## 回帰分析（regression analysis）とは
 
 - データに回帰直線をあてはめ、そこから得られた予測値や残差をもとにデータを解釈する方法
+
+  - 青い線が回帰直線
+  
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+dat <- read.csv("../stat_class_2025/sample_data/pokemon_data.csv")
+
+dat %>%
+  ggplot(aes(x = こうげき, y = HP)) +
+  geom_point() +
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE) +
+  coord_fixed(1 * max(dat$こうげき) / max(dat$HP))
+
+```
+
+### 回帰分析の種類
+- 線形モデル（Linear Model）
+
+  - 正規分布を仮定
+  - 最小二乗法で推定
+  
+- 一般化線形モデル（generalized linear model）
+
+  - 正規分布以外を仮定できる
+  - 最尤推定法で推定
+  
+- 一般化線形混合（効果）モデル（generalized linear mixed model）
+  - 正規分布以外を仮定でき、個体差や場所差などを考慮に入れる
+  - 最尤推定法で推定
 
 ### 変数の名前
 
@@ -30,16 +62,8 @@ options(scipen = 999)
 
 ### 最小二乗法
 
-- 青い線が回帰直線。以下の一次式で表される
+以下の一次式で表される
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
-dat <- read.csv("../stat_class_2025/sample_data/pokemon_data.csv")
-
-dat %>%
-  ggplot(aes(x = こうげき, y = HP)) +
-  geom_point() +
-  geom_smooth(method="lm", fomula='y~x', se = F)
-```
 
 \[
 \hat{y} = a + bx
@@ -85,8 +109,6 @@ stats::lm(mtcars$mpg ~ mtcars$cyl, weights = NULL)
 stats::glm(mtcars$mpg ~ mtcars$cyl)
 ```
 
-:::
-
 ### ベイズ推定
 - 最尤法の代わりに使う方法。
 
@@ -96,7 +118,7 @@ stats::glm(mtcars$mpg ~ mtcars$cyl)
 
 - マルコフ連鎖モンテカルロ法（MCMC）によって得られた乱数のサンプルを使って推定する。
 
-```{r}
+```{r, echo=FALSE}
 res <- rstanarm::stan_glm(
         mpg ~ cyl, 
          seed = 123,
@@ -130,8 +152,8 @@ ggplot(df, aes(x = value, fill = type)) +
 
 ```
 
-```{r}
-res_prior <- stan_glm(        
+```{r, echo=FALSE}
+res_prior <- rstanarm::stan_glm(        
          mpg ~ cyl, 
          seed = 123,
          data = mtcars,
@@ -168,12 +190,12 @@ ggplot(df_combined, aes(x = cyl, fill = type)) +
 ```
 
 <div class="alert alert-info">
-  <strong>注</strong> 事前分布を特に設定しない場合、頻度統計の結果もベイズ統計の結果も近似する。
+  <strong>注</strong> 事前分布を狭く指定しない場合、頻度統計の結果もベイズ統計の結果も近似する。
 </div>
 
 - ベイズ推定では、事前分布の設定を行ったり、サンプリングが適切に行われたかを確認する手順が必要である。今回は推定の紹介だけで、今後詳しい設定法などに言及する。
 
-
+:::
 
 ### 回帰分析における予測値と残差
 - **残差（residual）**：予測の誤差ともいう。それぞれの観測値と直線の差のこと。つまり、\(e = y - \hat{y}\) 。
@@ -213,7 +235,7 @@ cor(res$residuals, res$fitted.values)
 ```
 
 ::: infobox
-R で計算すると、理論的には 0 になるはずの値が浮動小数点演算の誤差により完全に 0 にならないことがあります([参考](https://stackoverflow.com/questions/23992032/sum-of-residuals-using-lm-is-non-zero))。
+R で計算すると、理論的には 0 になるはずの値が**浮動小数点演算の誤差**により完全に 0 にならないことがあります([参考](https://stackoverflow.com/questions/23992032/sum-of-residuals-using-lm-is-non-zero))。
 :::
 
 #### 変数の直行分解と残差の意義
@@ -316,19 +338,299 @@ summary(res)
 
 
 ### 回帰分析を使う際の注意点
+- 係数の数値は"Effects"ではなく、"Comparison"
 
-- 因果関係まではわからない
+  - 「係数がXXという数値が得られた。従って、ZZ増えると、変数 *y* は上がる/下がる」という主張は、不正確な場合がほとんど。回帰分析は「説明」と「予測」のどちらにも用いられるが、変数 *x* から変数 *y* への→を（「説明」）主張するにはその他の手続きが必要となる。
+
+    - 予測（実用的）：応用的な状況で有用な意思決定を行うために結果や行動の予測する
+    - 説明（理論的）：理論の検証や発展のために現象の性質を理解したり説明したりする
+    
   - 決定係数の値が高く、よく適合していることと、そのモデル内の回帰係数が「因果効果の良い推定値」かどうかは、本質的には別の問題
+  
+- 予測変数と目的変数に線形の関係がある
 
+- 十分なサンプルサイズが必要
 
+  - 検定力分析で事前に決定する
 
-- 分散分析をやめよう（https://www.cambridge.org/core/journals/studies-in-second-language-acquisition/article/multiple-regression-as-a-flexible-alternative-to-anova-in-l2-research/61C0249F51E200C712D2DDF7D489C835）
+- 外れ値がないか
+
+- 残差の独立性があるか
+
+  - 残差に相関がある場合、残差の独立性が満たされていない
+  - 時系列など時間に関わるデータはこれが満たされない場合が多い（株価のデータなど）
+
+- 残差の等分散性があるか
+
+  - 残差に何らかの傾向があるとモデルが誤っていると判断する
+
+- 残差が正規分布しているか
+
+   - 回帰モデルは独立変数が正規分布していることを前提としていない。また、従属変数が正規分布していることを仮定しているわけではなく、regression errorが正規分布していることを仮定している。
 
 
 ## ハンズオンセッション
 
+### データの読み込み
+
+- 英語テストの得点が従属変数、独立変数が英語学習歴の長さ
 
 
+```{r}
+dat <- read.csv("../stat_class_2025/sample_data/simp_reg.csv")
+```
+
+### 読み込んだデータの確認
+
+```{r}
+head(dat, 5)
+```
+- 記録されていないデータ（セルにNA）がないかを確認する
+
+```{r}
+complete.cases(dat)
+
+subset(dat, complete.cases(dat) == FALSE)
+```
+
+- NAが入っている行を削除
+
+```{r}
+dat.2 <- na.omit(dat)
+```
+
+- 削除されているか再度確認
+```{r}
+subset(dat.2, complete.cases(dat.2) == FALSE)
+```
+```{r}
+summary(dat)
+```
+
+- 散布図で外れ値がないかを確認。```par(pty="s")```を実行することで、正方形の図として描画される。
+
+```{r}
+par(pty="s")
+
+plot(dat.2$mid, dat.2$end,
+     xlim = c(0, 100),
+     ylim = c(0, 100),
+     xlab = "Mid-term",
+     ylab = "Final",
+     )
+```
+
+- 外れ値
+  - データの大部分の傾向と異なるもので、必ずしも誤りとは限らないが、データ集計や分析の際にその存在が結果の精度を悪化させる可能性があるもの。
+  - 何を外れ値とするかは研究の目的やデータ収集の状況による。今回はマハラノビスの距離を用いて、行う例を紹介する。
+
+```{r}
+d <- mahalanobis(dat.2[,2:3], apply(dat.2[,2:3], 2, mean), cov(dat.2[, 2:3]))
+```
+
+```{r}
+n <- nrow(dat.2)
+v <- ncol(dat.2[, 2:3])
+
+outliers <- n * (n - v) / ((n ^ 2 - 1) * v) * d > qf(0.9, n, v)
+```
+
+```{r}
+par(pty="s")
+
+plot(dat.2[, 2:3],
+     pch = ifelse(outliers, 16, 21),
+     xlim = c(0, 100),
+     ylim = c(0, 100),
+     xlab = "Mid-term",
+     ylab = "Final"
+)
+
+```
+
+- 外れ値の除去
+
+```{r}
+dat.3 <- dat.2[-which(outliers == TRUE),]
+```
+
+```{r}
+par(pty="s")
+
+plot(dat.3[, 2:3],
+     xlim = c(0, 100),
+     ylim = c(0, 100),
+     xlab = "Mid-term",
+     ylab = "Final"
+)
+
+```
+
+### 変数間の相関の確認
+
+```{r}
+cor(x = dat.3$mid, y = dat.3$end)
+```
+
+### 回帰分析の実施
+- 最小二乗法
+
+```{r}
+model.ls <- lm(end ~ mid, data = dat.3)
+```
+
+```{r}
+summary(model.ls)
+```
+
+- 最尤推定法
+```{r}
+model.mlm <- glm(end ~ mid, data = dat.3)
+```
+
+```{r}
+summary(model.mlm)
+```
+
+- 決定係数
+```{r}
+r_2 <- 1 - model.mlm$deviance/model.mlm$null.deviance
+
+r_2
+
+performance::r2(model.mlm)
+```
+
+- 自由度調整済決定係数
+
+\[
+1 - \frac{n-1}{n-p}(1-R^2)
+\]
+```{r}
+n <- nrow(dat.3)
+p <- length(coef(model.mlm)) -1 # 切片を抜いた変数の数
+
+1 - ((1 - r_2) * (n - 1)) / (n - p - 1)
+```
+
+- ベイズ推定
+
+```{r}
+model.b <- stan_glm(end ~ mid, data = dat.3, refresh = 0, seed = 123)
+```
+
+```{r}
+summary(model.b)
+```
+
+
+### 結果の解釈
+```{r}
+par(pty="s")
+
+plot(dat.3[, 2:3],
+     xlim = c(0, 100),
+     ylim = c(0, 100),
+     xlab = "Mid-term",
+     ylab = "Final"
+)
+
+abline(model.mlm)
+```
+
+- 信頼区間も可視化
+
+  - 最尤推定法
+```{r}
+stats::confint(model.ls, level = 0.95)
+```
+
+  - ベイズ推定
+```{r}
+rstanarm::posterior_interval(model.b, prob = 0.95)["mid", ]
+```
+
+```{r}
+new <- data.frame(mid = seq(1, 100, 1))
+
+pred <- stats::predict(model.mlm, newdata = new, se.fit = T,
+                       level = 0.95, type = "response")
+
+confidence <- data.frame(
+  fit = pred$fit, 
+  lower = pred$fit - 1.96 * pred$se.fit, 
+  upper = pred$fit + 1.96 * pred$se.fit
+)
+```
+
+- 点線が95%信頼区間
+```{r}
+par(pty="s")
+
+plot(dat.3[, 2:3],
+     xlim = c(0, 100),
+     ylim = c(0, 100),
+     xlab = "Mid-term",
+     ylab = "Final"
+)
+
+abline(model.ls)
+
+lines(new$mid, confidence[, 2], lty = 3)
+lines(new$mid, confidence[, 3], lty = 3)
+```
+
+### モデルの診断
+- 予測値と残差の散布図（x軸 = 予測値、y軸 = 残差）
+
+  - 点は、点線に対して、ランダムに散らばっていればよい。赤い線は残差を説明する回帰曲線で、点線（残差0の線）と重なっているほど良いモデル。
+
+  - 残差の絶対値が大きいデータフレームの行番号を表示している
+  
+```{r}
+par(pty="s")
+plot(model.mlm, which = 1)
+```
+
+- Q-Q（quantile-quantile）プロット（x軸 = 標準正規分布の分位点、y軸 = 残差の分位点）
+
+  - 正規分布であれば、点線に重なる
+  
+    - 残差の絶対値が大きいデータフレームの行番号を表示している
+
+  - わかりやすいアニメーション（[参考](https://qiita.com/kenmatsu4/items/59605dc745707e8701e0)）
+
+
+```{r}
+par(pty="s")
+plot(model.mlm, which = 2)
+```
+
+- ```acf```関数で残差の独立性を確認
+
+  - 自己相関係数：一つ前のデータとの相関を示す。Lagはデータの数の半分になる
+  - 引数に```plot = T```でコレログラムを描画
+  
+    - ラグ0は係数1になる。
+    - 青い点線は帰無仮説「自己相関係数が0」の95%信頼区間。この中に線が収まっていれば、自己相関がないと判断する
+    
+```{r}
+stats::acf(model.mlm$residuals, plot = F)
+```
+
+```{r}
+stats::acf(model.mlm$residuals, plot = T)
+```
+
+
+- 論文への記載
+
+  中間試験の得点から学期末試験の得点を予測するため、回帰分析を行った。その結果、係数は統計的に有意であった（*b* = 0.73 [0.60, 0.85], *SE* = 0.07, *p* < .001）。係数は分散の57 %を説明していた（\( R^2\) = 56.7 %, 調整 \( R^2\) = 56.2 %）。
+  
+  - <u>（結果に対し謙虚）</u>**平均して、**中間試験の得点が1点差の学生を比較した際、中間試験の得点が1点高い学生は、低い学生に比べ、期末試験の得点が0.73点高い。
+
+  - <u>（因果関係を匂わせており不正確）</u>中間試験の得点が1点高くなるほど、期末試験の得点は0.73点高くなる
+  
 ## 次週までの課題
 ### 課題内容
 
@@ -355,6 +657,12 @@ https://takehiko-i-hayashi.hatenablog.com/entry/2017/09/27/105559
 - http://www.ner.takushoku-u.ac.jp/masano/class_material/waseda/keiryo/R34_MLE.html#1_%E6%9C%80%E5%B0%8F%E4%BA%8C%E4%B9%97%E6%B3%95%E3%81%A8%E6%9C%80%E5%B0%A4%E6%B3%95%E3%81%AE%E9%81%95%E3%81%84
 - Gelman et al., Regression and other stories
 - https://zenn.dev/tatamiya/articles/0d9a79260ebb42#lm-%E9%96%A2%E6%95%B0%E3%81%AE%E5%AE%9F%E8%A3%85%E3%82%92%E3%81%A9%E3%81%86%E3%82%84%E3%81%A3%E3%81%A6%E8%BE%BF%E3%82%8B%E3%81%8B%EF%BC%9F
+- Rによる教育データ分析入門
+- https://www.stat.go.jp/training/2kenkyu/ihou/72/pdf/2-2-723.pdf
+- https://hira-labo.com/archives/1806
+- https://qiita.com/kenmatsu4/items/59605dc745707e8701e0
+- 心理学的研究における重回帰分析の適用に関わる諸問題
+
 ```{=html}
 <style>
 .infobox {
