--- a/01-week1.Rmd
+++ b/01-week1.Rmd
@@ -20,7 +20,7 @@
 </style>
 ```
 
-## 「とーけいしょり」とは
+## 「統計処理」とは
 
 ### 量的研究、質的研究
 - 本講義のタイトルにある「統計処理」は、<u>研究の目的などに応じて得られたデータをまとめたり、可視化したり解析する行為</u>を指します。言語に関する研究の手法は大きく分けて以下の2つがある。
