--- a/06-regression.Rmd
+++ b/06-regression.Rmd
@@ -8,6 +8,7 @@ options(scipen = 999)
 ```
 
 ## 今後の修正案
+
 - 最小二乗法の話だけをするのであれば、lmを一貫して使った方がいい？でも正規分布なら一致するからglmを使ってもいい？？
 
 - 興味深い資料：
@@ -340,6 +341,8 @@ R^{2} = 1 - \frac{SS_e}{SS_y}
 summary(res)
 ```
 
+### 回帰係数の有意性
+- 帰無仮説（独立変数の係数が0）を *t* 分布をもとに検定
 
 ### 回帰分析を使う際の注意点
 - 係数の数値は"Effects"ではなく、"Comparison"
