--- a/index.Rmd
+++ b/index.Rmd
@@ -3,17 +3,18 @@ title: "言語統計処理（春学期）"
 author: "寺井雅人（Masato Terai）"
 date: "Published:2025-02-03, Last update(JST): `r format(Sys.time(), '%Y-%m-%d %X')`"
 site: bookdown::bookdown_site
+output: bookdown::html_document
 documentclass: book
 bibliography: [book.bib, packages.bib]
 # url: your book url like https://bookdown.org/yihui/bookdown
 # cover-image: path to the social sharing image like images/cover.jpg
 link-citations: yes
-github-repo: rstudio/bookdown-demo
+#github-repo: rstudio/bookdown-demo
 ---
 
 # About
 
-　この資料は、名古屋大学大学院人文学研究科の学生を対象に開講されている言語統計処理（春学期）で使用する資料です。配布する際は、事前に作成者の寺井雅人までご連絡いただければ幸いです（[Researchmap](https://researchmap.jp/terai-research)）。<br>
+　この資料は、名古屋大学大学院人文学研究科の学生を対象に開講されている言語統計処理（春学期）で使用する資料です。配布する際は、事前に作成者の寺井雅人まで連絡してください（[researchmap](https://researchmap.jp/terai-research)）。<br>
 　この資料は、適宜修正、アップデート行う予定です。ファイルの最終更新日を確認するようにしてください。
 
 ## 講義概要
@@ -38,27 +39,29 @@ github-repo: rstudio/bookdown-demo
 
 </div>
 
-
 ## 講義スケジュール
 - Week 1：オリエンテーション、R(Studio)のインストールと操作、R Markdown
 - Week 2：要約統計量
 - Week 3：推測統計学
 - Week 4：統計的検定の論理と *t検定*
 - Week 5：相関分析
-- Week 6：単回帰分析（連続型の説明変数）
-- Week 7：重回帰分析
-- Week 8：一般化線形モデル：ロジスティック回帰分析
-- Week 9：階層モデル
-- Week 10：効果量と検定力分析
-- Week 11：tidyverseパッケージによるデータの加工と可視化
-- Week 12：
+- Week 6：単回帰分析
+- Week 7：重回帰分析(1)
+- Week 8：重回帰分析(2): コーディングの変更
+- Week 9：重回帰分析(3): 交互作用の解釈
+- Week 10：一般化線形モデル：ロジスティック回帰分析
+- Week 11：階層モデル
+- Week 12：効果量と検定力分析
 - Week 13：ノンパラメトリック検定
-- Week 14：
+- Week 14：tidyverseパッケージによるデータの加工と可視化
 - Week 15：言語研究とオープンサイエンス
 
 ## 成績評価について
 - 小テスト（20%）、演習課題（40%）、レポート試験（40%）
   - 上記の各評価100点満点に換算し、それらを合計した得点が60点以上を合格とする。A+（100-95）、A（94-80）、B（79-70）、C（69-65）、C-（64-60）、F（59-0）
+
+## 留意事項
+- 質問は講義内容に関する質問への回答を優先します。取り組んでいる学位論文やその他プロジェクトへの質問への回答は原則お答えしません。
 
 ```{r include=FALSE}
 # automatically create a bib database for R packages
