--- a/04-week4.Rmd
+++ b/04-week4.Rmd
@@ -232,12 +232,13 @@ t.test(df$Data2, mu = 55)
 
   - *β* で表す
 
-```{r, echo = F, fig.cap = "image source: https://www.statisticssolutions.com/to-err-is-human-what-are-type-i-and-ii-errors/"}
-frink <- magick::image_read("C:/Users/terai-masato/Documents/stat_class_2025/picture/error.png")
-magick::image_write(frink, "C:/Users/terai-masato/Documents/stat_class_2025/picture/error.png", format = "png")
-knitr::include_graphics("C:/Users/terai-masato/Documents/stat_class_2025/picture/error.png")
-```
 
+```{r, echo = F, fig.cap = "image source: https://www.statisticssolutions.com/to-err-is-human-what-are-type-i-and-ii-errors/"}
+frink <- magick::image_read("./picture/error.png")
+magick::image_write(frink, "./picture/error.png", format = "png")
+knitr::include_graphics("./picture/error.png")
+```
+  
 - 検出力（power）
 
   - 帰無仮説が偽であるとき、正しく帰無仮説を棄却できる確率
