--- a/13-Week13_nonpara.Rmd
+++ b/13-Week13_nonpara.Rmd
@@ -6,7 +6,7 @@ library(tidyverse)
 library(kableExtra)
 ```
 
-#まだ工事中
+## ハンズオンと説明セッションを明確に分けずに行う
 
 ## 事前の確認
 
@@ -20,8 +20,327 @@ library(kableExtra)
 1. 
 2. 
 
-## ハンズオンセッション
+## ノンパラメトリック検定
+- 母集団に特定の分布を仮定しない検定に対して用いることができる手法。
 
+  - e.g., カイ二乗検定、フィッシャーの正確確率検定
+
+- 名義尺度データや順序尺度データの分析に使われる
+
+- 名義尺度データの場合、クロス集計表などで集計結果が示される
+
+## 名義尺度データ
+
+### カイ二乗検定（1変数）
+
+### データの読み込み
+
+- 英語の授業で60名の学生に対し、歌、映画、ニュースのどれを使った授業を受講したいかのアンケートを実施。これら3つの種類の希望者の数に有意な違いがあるかを調べる。
+
+  - 3つのカテゴリの期待値は、それぞれ $\frac{60}{3} = 20$
+  
+  - 帰無仮説：「3つの種類の度数は一様である」
+
+```{r}
+dat <- read.csv("../stat_class_2025/sample_data/chisq.csv")
+```
+
+### 中身の確認
+
+```{r}
+head(dat, 3)
+```
+
+### クロス集計表
+
+```{r}
+table(dat)
+```
+
+### カイ二乗検定の実行
+
+- ```table()```の結果を保存
+
+```{r}
+tx <- table(dat)
+```
+
+- ```chisq.test()```関数を実行
+
+- *p* 値が有意水準 .05以下になっており、受講希望に有意差がある
+```{r}
+library(stats)
+chisq.test(tx)
+```
+
+### 多重比較
+- 3つの種類のどこに有意差があるかを検定する
+
+  - 各カテゴリ間でカイ二乗検定を3回行う。検定を繰り返すため、ボンフェロー二の方法で有意水準の調節をする
+
+  - 3回繰り返すため、有意水準の .05を3で割った値を基準にする（ *p* = .167）
+
+- 映画 vs. ニュース  
+```{r}
+chisq.test(c(29, 14), p = c(0.5, 0.5))
+```
+
+- 映画 vs. 歌 
+```{r}
+chisq.test(c(29, 17), p = c(0.5, 0.5))
+```
+
+- 歌 vs. ニュース  
+```{r}
+chisq.test(c(17, 14), p = c(0.5, 0.5))
+```
+
+### 論文への記載
+学生60名に映画、ニュース、歌のうちどれを使った授業を受講したいか調査した結果、それぞれ29、17、14人であった。カイ二乗検定を行った結果、*χ^2*(2) = 6.30、*p* = .0429と5%有意水準で受講希望者が有意に異なっていた。そこで多重比較を行い、ボンフェロー二の方法で補正した有意水準（ *α* = .0167）と比較した結果、どこにも有意差は見られなかった。
+
+  - *χ^2*(自由度)
+
+### 3×3分割表のカイ二乗検定
+高校生55名の単語テストの得点順に3グループに分けた後、「声に出す」「書き写す」あるいは、その「両方」のいずれの方法で暗記したかを尋ねた。
+
+  - 帰無仮説：「単語テストの成績と暗記方法に関連はない」
+
+```{r, echo=FALSE}
+data <- matrix(c(
+  4, 7, 10,
+  6, 4, 6,
+  13, 3, 2), nrow = 3, byrow = TRUE)
+
+colnames(data) <- c("両方", "書き写す", "声に出す")
+rownames(data) <- c("下位群(1)", "下位群(2)", "下位群(3)")
+
+table_data <- as.table(data)
+print(table_data)
+```
+
+
+### 練習用データの作成
+```{r}
+x <- matrix(c(4, 7, 10, 6, 4, 6, 13, 3, 2),
+            ncol = 3, nrow = 3, byrow = T)
+```
+
+### カイ二乗検定の実施
+
+- 期待度数が0、もしくは期待度数が5未満になるセルが全体の20%以上の場合に警告メッセージが表示される。
+
+- この場合、Fisherの正確確率検定の値を確認する
+
+```{r}
+res <- chisq.test(x)
+res
+```
+
+```{r}
+stats::fisher.test(x)
+```
+
+### 効果量の算出
+- ```vcd```パッケージの```assocstats```関数でCramerの *V* を算出する
+
+```{r}
+#install.packages("vcd")
+```
+
+```{r}
+library(vcd)
+assocstats(x)
+```
+
+### 調整済み標準化残差の確認
+
+- 絶対値1.96（5%水準棄却値）より絶対値が大きいものを確認
+
+```{r}
+res$stdres
+```
+
+### 結果の記載
+単語テストを受けた55名の単語の暗記方法とテストの成績に関連があるかをカイ2乗検定で分析した。その結果、*χ^* (1) = 11.82、*p* = .018、 Cramer' *V* = .33と、有意な関連が見られた。 クロス集計表で期待値5未満が全体の20%以上あったため、Fisherの直接法を行った。その結果、*p* = .017と5%水準で有意だった。そこで、標準残差で判断したところ、上位群は暗記の際に声を出す方法だけを使用する場合が有意に少なく（ *z* = -2.38, *p* < .05）、その方法と書き写す方法の両方を使う傾向にあることがわかった（*z* = -3.19, *p* < .08）。それに対して、下位群は声を出す方法だけを使う傾向があり（ *z* = 1.85. *p* <.05）、両方の方法を使うことが有意に少なかった（ *z* = -2.69, *p* < .01）。中位群にはそのような顕著な傾向はみられなかった。
+
+## リスク比とオッズ比
+- 2群のカテゴリデータの効果量として使われる
+
+### リスク比（相対危険度）
+- 「海外経験がある人は英語を話すのが好きな傾向があるか」
+
+```{r, echo=FALSE}
+data <- matrix(c(10, 11, 21, 8, 25, 33, 18, 36, 54), 
+               nrow = 3, byrow = TRUE)
+rownames(data) <- c("海外経験あり", "海外経験なし", "計")
+colnames(data) <- c("好き", "嫌い", "計")
+
+data %>%
+  kbl() %>%
+  kable_styling(
+    bootstrap_options = c("striped"),
+                full_width = T)
+```
+
+
+- 海外経験のある人で英語で話すのが好きな人の割合
+
+\[
+リスク = \frac{10}{10 + 11} = \frac{\text{海外経験あり群で英語を話すのが好き}}{\text{海外経験あり群全体}} = \frac{10}{21} = 0.476
+\]
+
+- 海外経験のない人で英語で話すのが好きな人の割合
+
+\[
+リスク = \frac{8}{8 + 25} = \frac{\text{海外経験なし群で英語を話すのが好き}}{\text{海外経験なし群全体}} = \frac{10}{21} = 0.476
+\]
+
+-  リスク比の算出
+
+  - 海外経験のある人で英語を話すのが好きな人は、海外経験のない人の何倍か
+  
+\[
+リスク比 = \frac{0.4762}{0.2424} = \frac{\text{海外経験のある人で英語で話すのが好きな人の割合}}{\text{海外経験のない人で英語で話すのが好きな人の割合}} = 1.964
+\]
+
+  - 海外経験のある人で英語を話すのが好きになる確率は、海外経験のない人の約2倍である
+
+### オッズ比
+
+- 海外経験のある人
+
+\[
+オッズ = \frac{\text{海外経験あり群で英語を話すのが好き}}{\text{海外経験あり群で英語を話すのが嫌い}} = \frac{10}{11} = 0.909
+\]
+
+  - 海外経験のある人は英語を話すのが好きと嫌いの比率がほぼ等しい
+  
+
+- 海外経験のない
+
+\[
+オッズ = \frac{\text{海外経験なし群で英語を話すのが好き}}{\text{海外経験なし群で英語を話すのが嫌い}} = \frac{8}{25} = 0.320
+\]
+
+  - 海外経験のない人は英語を話すのが好きと嫌いの比率は0.320:1で、嫌いが約3倍高い
+  
+- オッズ比の計算
+\[
+オッズ比 =  \frac{0.909}{0.320} = 2.841
+\]
+
+  - 海外経験のある人は、英語を話すのが好きになる確率が、海外経験のない人の2.84倍である
+
+::: infobox
+リスク比もオッズ比も、分子を何にするかで数値やその解釈が変わる。分子に大きい値の方を持ってくる方が解釈しやすい。結果が分かった後に、その原因をさかのぼって調査する研究（後ろ向き調査）では、リスク比を使うことができない。
+:::
+  
+## 対応のあるデータを比較する
+
+### マクネマー検定
+- 2 × 2分割表で使用される
+
+- *t* 検定に似ている
+
+- 話すことへの自信に関するアンケート調査
+
+  - 話す前と後で自信に統計的有意な変化があったかを分析する
+  
+```{r, echo=FALSE}
+data <- matrix(c(15, 21, 3, 11), 
+               nrow = 2, byrow = TRUE)
+rownames(data) <- c("ない", "ある")
+colnames(data) <- c("ない", "ある")
+
+data %>%
+  kbl() %>%
+  kable_styling(
+    bootstrap_options = c("striped"),
+    full_width = TRUE
+  ) %>%
+  add_header_above(c("留学前" = 1, "留学後" = 2)) %>%
+  column_spec(1, bold = TRUE, color = "black") 
+```
+
+-  データの読み込み
+
+  - 1列目と2列目のデータのみ読み込む
+
+```{r}
+dat <- read.csv("../stat_class_2025/sample_data/McN_Signed.csv")[1:2]
+```
+
+```{r}
+head(dat)
+```
+
+- ```table()```で分割表を作成する
+
+```{r}
+table(dat$Before2, dat$After2)
+```
+
+- ```mcnemar.test()```で分析を行う
+
+```{r}
+stats::mcnemar.test(dat$Before2, dat$After2)
+```
+
+- 効果量の算出
+
+\[
+効果量 r = \sqrt\frac{{χ^2}}{N} = \sqrt\frac{12.04}{21 + 3} = 0.708
+\]
+
+-  結果の記載
+1年問の留学を経験した50名の学生に対して、留学先の言語で話す自信があるかを留学前後で尋ね、その変
+化をマクネマー検定で分析した。その結果、留学前後で、「自信がない」から「自信がある」となった学生は21
+名で、逆に、「自信がある」から「自信がない」に変わった学生は3名で、検定の結果、*p* < .001で有意な変化が見られた。また、効果量も *r* = .71と大きく、1年問の留学は、話すことへの自信につながることが示された。
+
+### コクランのQ検定
+- 対応ある3変数以上の間でそれぞれの比率に変化や差があるかを検定（フリードマン検定の2値データ版）。
+
+  - データは2値データ
+  
+  - 帰無仮説「1/0の比率がすべての変数間で等しい」
+
+  - 最低でも10以上のサンプルが必要
+  
+- データの読み込み
+
+```{r}
+dat <- read.csv("../stat_class_2025/sample_data/Cochran.csv")
+```
+
+```{r}
+head(dat, 2)
+```
+
+- ```nonpar```パッケージの```cochrans.q()```関数を使う
+
+```{r}
+#install.packages("nonpar")
+library(nonpar)
+cochrans.q(dat)
+```
+
+- マクネマ―検定による多重比較
+
+  - 4回行うので、*α* は 0.0125
+  
+```{r}
+mcnemar.test(dat$Listening, dat$Speaking)
+mcnemar.test(dat$Listening, dat$Writing)
+mcnemar.test(dat$Reading, dat$Speaking)
+mcnemar.test(dat$Reading, dat$Writing)
+```
+
+- 効果量はマクネマー同様に、カイ二乗値をデータ数で割ってルートを取る
+
+- 記載例
+学生15人に対して、英語の4技能に対する苦手意識を調査した技能問によって得意と感じる比率に差があるかどうかを、コクランの Q検定で検証したところ、*Q*(3) = 9.714, *p* = .021と 5%水準で有意であったそこで,マクネマー検定であらかじめ関心のある技能問で4回の多重比較を行ったところ、ボンフェロー二の方法で調整した有意水準( = .05/4 = 0.0125)で判断すると、どの条件間にも有意差はなかった。
+
+## 順序尺度データ
 
 ## 次週までの課題
 ### 課題内容
@@ -38,7 +357,7 @@ library(kableExtra)
 - 締め切りは今週の木曜日まで
 
 ## 参考文献
-
+- 平井et al. Rによる教育データ
 ```{=html}
 <style>
 .infobox {
