--- a/01-week1.Rmd
+++ b/01-week1.Rmd
@@ -23,14 +23,14 @@
 ## 「統計処理」とは
 
 ### 量的研究、質的研究
-- 本講義のタイトルにある「統計処理」は、<u>研究の目的などに応じて得られたデータをまとめたり、可視化したり解析する行為</u>を指します。言語に関する研究の手法は大きく分けて以下の2つがある。
+- 本講義のタイトルにある「統計処理」は、<u>研究の目的などに応じて得られたデータをまとめたり、可視化したり解析する行為</u>を指す。言語に関する研究の手法は大きく分けて以下の2つがある。
 
   1. 量的研究（ quantitative research ）
     - 数量を用いて分析。一般化が目的。「仮説検証型」。
   2. 質的研究（ qualitative research ）
     - 数量化せずに分析。一般化は目的ではない。「仮説生成型」。
 
-　寺井は量的な研究しか行ってきていないため、本講義では量的な研究を行うことを念頭に統計処理の方法について講義を行う。しかし、それらが質的研究と全く関連がないわけではない（もし質的な研究に関心がある受講生の方がいたら、関連すると思う点を教えてください）。
+　寺井は量的な研究しか経験がないため、本講義では量的な研究を行うことを念頭に統計処理の方法について講義を行う。しかし、それらが質的研究と全く関連がないわけではない（もし質的な研究に関心がある受講生の方がいたら、関連すると思う点を教えてください）。
 
 - 量的研究では数量を扱うため、統計手法を用いて分析を行うことが多い。よって、量的研究を行う場合、統計に関する知識が必要不可欠。
 
@@ -54,7 +54,9 @@
 
 ## Rのインストール
 
-- 🔊　Windowsを使用している人で、DocumentsのパスにOne Driveが関係している人は教えてください。将来悪さをする可能性がある。
+::: infobox
+🔊　Windowsを使用している人で、DocumentsのパスにOne Driveが関係している人は教えてください。
+:::
 
 1. Rの公式サイトにアクセス（ https://www.r-project.org/ ）
 2. CRANをクリック
@@ -83,7 +85,7 @@
 
 - Rだけでも分析は可能だが、Rだけの解析は難しい。そこで、よりRでの解析を行いやすくする統合開発環境（RStudio）の中でRを使用する。
 - 注意点として、Rのインストールも必ず行う必要がある。
-- RStudioはWeb版とローカル版があり、前者はオンライン上で使用するが、後者は各個人のパソコンで使用する。Web版の使用には、サーバーが必要であるため、基本的にローカル版（RStudio Desktop）での使用に慣れる方がよい。
+- RStudioはWeb版とローカル版があり、前者はオンライン上で使用するが、後者は各個人のパソコンで使用する。Web版の使用には、サーバーが必要であるため（基本有料）、ローカル版（RStudio Desktop）での使用に慣れる方がよい。
 
 ## RStudioのインストール
 
@@ -188,9 +190,9 @@
 -   以下の文章をR Markdownを使って再現してください。
 
 ::: infobox
-## 名古屋飯といえば
+\# 名古屋飯といえば
 
-## ひつまぶし：*Hitsumabushi*
+\## ひつまぶし：*Hitsumabushi*
 
 おすすめは以下のお店です。
 
@@ -237,7 +239,7 @@ plot(dat)
 -   以下をドキュメントチャンクとコードチャンクを使って再現してください。
 
 ::: infobox
-## 食費の合計
+\## 食費の合計
 
 - 以下は、名古屋旅行で使った食費の合計である。
 
@@ -273,15 +275,17 @@ total <- sum(hitsu, miso)
 
 ## 次週までの課題
 ### 課題内容
-- 小テストの準備。本講義の内容に関する簡単なクイズを行います。配布した資料を見返しておいてください。
-- 自己紹介の文をR Markdownで作成し、出力したHTMLファイルを提出してください。以下の2項目を必ず入れてください。クラス内や外部へ公開してもいい情報だけを入れてください！
+- 本講義の内容に関する簡単な小テストを行います。配布した資料を見返しておいてください。
+- 自己紹介の文をR Markdownで作成し、出力したHTMLファイルをTACTへ提出してください。以下の2項目を必ず入れてください。クラスメートと公開してもいい情報だけを入れてください！
 
 - 名前、出身、研究科、自分の研究したいことを二文くらいでまとめる。
   - レベル分け、箇条書き、強調（e.g., 下線、太字、イタリック）
 
-### 提出方法
-- メールにファイルを添付して送信。
-- 締め切りは今週の木曜日まで
+- 締め切りは**今週の木曜日まで**
+
+::: infobox
+質問等はTACTにお願いします。
+:::
 
 ## 参考文献
 - 📚外国語教育ハンドブック
