--- a/13-Week13_nonpara.Rmd
+++ b/13-Week13_nonpara.Rmd
@@ -27,9 +27,46 @@ library(kableExtra)
 
 - 名義尺度データや順序尺度データの分析に使われる
 
-- 名義尺度データの場合、クロス集計表などで集計結果が示される
 
 ## 名義尺度データ
+- クロス集計表などで集計結果（それぞれの度数）が示される
+
+```{r}
+table4a %>%
+  mutate(sum = `1999` + `2000`) %>%
+  kbl() %>%
+  kable_styling(
+    bootstrap_options = c("striped"),
+                full_width = T)
+```
+
+- カイ（ *χ* ）二乗検定（chi-square test）
+
+  - 観測された度数と期待値に偏りがあるかを検定する
+  
+  - *χ* 二乗値は *χ* 二乗分布に近似的に従うという理論に基づいている
+  
+- カイ二乗検定の前提と留意点
+
+  - 観測データの独立性
+  
+    - データを表に分類する際に、そのデータはいずれか1つのセルに1回しか入れられない
+  
+  - 正規分布は仮定しないが、標本が無作為抽出されていることが前提
+  
+  - サンプルサイズ
+  
+    - 最低1つのセルの期待値が5以上
+    
+      - 5以下の場合はフィッシャーの正確確率検定が使用される
+    
+  - 対応のあるデータの分析はできない
+  
+  - 2 × 2の表（自由度 1）の場合、Type 1 Errorが大きくなる
+    
+    - この場合フィッシャーの正確確率検定か、イェーツの補正をかけた *p* 値を報告する。しかし、イェーツの補正は過剰に修正されるため、フィッシャーの正確確率検定の方が推奨されている
+  
+- 1変数のカイ二乗検定は**適合度検定**、2変数のカイ二乗検定は**独立性の検定**とも呼ばれる
 
 ### カイ二乗検定（1変数）
 
@@ -57,7 +94,7 @@ head(dat, 3)
 table(dat)
 ```
 
-### カイ二乗検定の実行
+### カイ二乗検定の実施
 
 - ```table()```の結果を保存
 
@@ -342,6 +379,169 @@ mcnemar.test(dat$Reading, dat$Writing)
 
 ## 順序尺度データ
 
+### 順序尺度データを扱うノンパラメトリック検定の特徴
+
+- 母集団から無作為抽出したデータであることを前提
+
+- 正規性を仮定しないが、等分散性は仮定する
+
+- 代表値として中央値、バラツキ度に（四分位）範囲、四分位偏差
+
+  - 平均値は外れ値の影響を大きく受けてしまうため
+  
+  - Week 2のまとめセクションを参照
+
+::: infobox
+パラメトリック検定に比べ、外れ値が含まれるデータに頑健。しかし、サンプルサイズが極端に少ない場合や2群の散らばりが大きく偏っている場合は、正確な検定が困難になる
+
+- サンプルサイズや散布度に問題がある場合
+
+  - 正確確率検定：サンプルサイズがかなり小さい場合や偏りがある場合に推奨される（e.g., カイ二乗検定でのフィッシャーの正確確率検定）。サンプルサイズが大きい場合は、モンテカルロ法と呼ばれる、シミュレーションをもとにした解析法が用いられる。
+:::
+
+### 順序尺度検定の実施
+
+### 対応なしの2群比較（ウィルコクソンの順位和検定）
+
+- データ: 習得させたい単語を10名には句の形で、別の 10名には文の中で覚えさせ、2週間後にどちらの条件が単語の定着がより良かったかを調べたもの。
+
+  - 帰無仮説：「単語提示条件の違いによって、語彙テスト得点の中央値に差はない」
+
+```{r}
+dat <- read.csv("../stat_class_2025/sample_data/WilcoxonRankSum.csv")
+```
+
+```{r}
+head(dat, 3)
+```
+
+- 因子型データに変更
+```{r}
+dat$Condition <- factor(dat$Condition)
+```
+
+- 描画
+```{r}
+hist(dat$Vocabulary[dat$Condition == 1], main = "Phrase")
+hist(dat$Vocabulary[dat$Condition == 2], main = "Sentence")
+```
+
+- 描画（並列）
+```{r}
+par(mfrow = c(1,2))
+hist(dat$Vocabulary[dat$Condition == 1], main = "Phrase")
+hist(dat$Vocabulary[dat$Condition == 2], main = "Sentence")
+```
+
+- 箱ひげ図 + 蜂群図
+
+```{r}
+with(dat, boxplot(Vocabulary ~ Condition, names = c("Phrase", "Sentence")))
+library(beeswarm)
+beeswarm(dat$Vocabulary ~ dat$Condition, add = T)
+```
+
+```{r}
+library(psych)
+describeBy(dat$Vocabulary, group = dat$Condition)
+```
+
+- 正規性がなく、データに同じ数字があるため、正確確率検定を行う
+
+  ```paired = TRUE```にすると、符号付順位検定となる
+
+```{r}
+#install.packages("exactRankTests")
+library(exactRankTests)
+
+res <- wilcox.exact(dat$Vocabulary ~ dat$Condition,
+                    paired = FALSE, correct = FALSE)
+
+res
+```
+
+- 効果量の算出
+
+```{r}
+pval <- res$p.value
+
+z1 <- qnorm(1-(pval/2))
+
+r1 <- z1 / sqrt(length(dat$Vocabulary))
+
+r1
+```
+
+- 結果の報告
+それぞれ10名の生徒に句または文単位で単語を覚えさせた後、30点満点の語彙テストを行った。得点が正規分布から逸脱していたため、ウィルコクソンの順位和検定を用いて、暗記条件間で語彙の定着度に差があるかを検証した。その結果、文グループ（mediam = 22.5）が5%水準で有意に句グループ（mediam = 6.5）より高いことがわかった（ *W* = 22.5, *p* = .037, *r* = .47)。また、効果量も中程度以上であった。このことから、単語を文単
+位で提示された方が、句単位で提示するより効果的だと言える。
+
+### 1要因の対応ある2群の比較（ウィルコクソンの符号付順位検定）
+- マクネマ―検定で使用したデータセットを使用する
+
+  - 3列目と4列目のデータのみ読み込む
+
+  - 学生50名に対し、6か月間の留学前後に、留学先の言語で話す自信度（ある[2]・少しある[1]・ない[0]）を尋ねた。順序性があるため順序尺度として扱い、留学前後でどう自信度が変化したかを分析する。
+
+```{r}
+dat <- read.csv("../stat_class_2025/sample_data/McN_Signed.csv")[3:4]
+```
+
+```{r}
+head(dat)
+```
+
+```{r}
+library(psych)
+describe(dat)
+```
+
+```{r}
+res <- wilcox.exact(dat$Before3, dat$After3, paired = T, correct = FALSE)
+
+res
+```
+
+- 効果量の算出
+
+  - 対応のあるデータのため、それぞれの条件のサンプルサイズを足す
+
+```{r}
+pval <- res$p.value
+z1 <- qnorm(1-(pval/2))
+
+r1 <- z1 / sqrt(100)
+
+r1
+```
+
+- 結果の報告
+50名の学生を対象に6ケ月の留学前後で,留学先の園語を話す自信にっいて変化があったかどうかを調査した。ウィルコクソンの符号付順位和検定の正確性検定で分析したところ、*V* = 22.5、*p* = .057、*p* = 0.190で有意差はなかった。
+
+### 関係の強さ（順序相関係数）
+
+  - スピアマンの順位相関係数、ケンドールの順位相関係数：ノンパラメトリック検定版の相関係数
+  
+  - 係数の解釈はパラメトリック検定と同じで、-1から1の間をとる
+
+- 関数はピアソンの時と同じ ```cor.test()```。```method = ```個所で指定する。
+
+```{markdown}
+cor.test(変数A, 変数B, method = "spearman")
+```
+
+```{markdown}
+cor.test(変数A, 変数B, method = "kendall")
+```
+
+
+- ここで紹介した以外にも、対応のない3群以上の比較で使用されるクラスカル・ウォリスの順位和検定や対応のある3条件以上の比較で使用されるフリードマン検定などがある
+
+::: infobox
+　ノンパラメトリック検定では、**中央値検定**、**順位検定**、**符号検定**などの種類がある。中央値検定では、中央値を超える人数と中央値以下の人数を数え、その比率を検討する。つまり、データの順番を無視し、2分割で検定を行う。順位和検定では、データのもつ順位が検定に考慮されるため、中央値検定よりもデータの持つ情報量の損失は小さい。
+　符号検定では、対応のあるデータの中央値検定のような方法で、データの値が正か負かを考慮して検定しているため、こちらもデータの順位の情報は損失している。符号検定よりも順位付けを行う符号付順位検定の方がデータの情報の損失は小さい。
+:::
+
 ## 次週までの課題
 ### 課題内容
 
@@ -358,6 +558,8 @@ mcnemar.test(dat$Reading, dat$Writing)
 
 ## 参考文献
 - 平井et al. Rによる教育データ
+- 三浦（監）「英語教師のための教育データ入門」
+- 水本外国語教育ハンドブック
 ```{=html}
 <style>
 .infobox {
